# ReclamosAtencionAlVecinoYB

./: .gitignore  docker-compose.yml
.github/workflows/: main.yml
cd_ci/python/: Dockerfile
services/scrapper/: .flake8  Dockerfile  pyproject.toml
services/scrapper/ReclamosYB/: scrapy.cfg
services/scrapper/ReclamosYB/ReclamosYB/: config.py  items.py  logger.py  middlewares.py  pipelines.py  settings.py
services/scrapper/ReclamosYB/ReclamosYB/spiders/: reclamos_spider.py
services/visualizaiton/: Dockerfile  pyproject.toml
services/visualizaiton/.streamlit/: secrets.example.toml
services/visualizaiton/app/: data.py  main.py
services/visualization/app/: main.py
