[tool.poetry]
name = "scrapper"
version = "0.1.0"
description = ""
authors = ["Ignacio Alvarez <ignacionicolasalvarez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.8.0"
polars = "^0.17.6"
google-cloud-bigquery = "^3.10.0"
xlsx2csv = "^0.8.1"
pandas = "^2.0.0"
openpyxl = "^3.1.2"
pandas-gbq = "^0.19.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
bandit = "^1.7.5"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = "E501,W503"
max-line-length = 120
exclude = "migrations,venv"